# llama-index-digitalocean-embeddings

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
tests/: conftest.py
