 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "llama-index-embeddings-digitalocean"
 version = "0.1.0"
 description = "DigitalOcean AI embeddings integration for LlamaIndex."
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
 authors = [{ name = "LlamaIndex Contributors" }]
 dependencies = [
     "llama-index-core>=0.10.0",
     "requests>=2.31.0",
 ]
 keywords = ["llama-index", "embeddings", "digitalocean", "ai"]

 [project.urls]
 Homepage = "https://github.com/llama-index-embeddings-digitalocean"
 Issues = "https://github.com/llama-index-embeddings-digitalocean/issues"

 [tool.setuptools.packages.find]
 where = ["src"]
 namespaces = true

 [tool.setuptools.package-dir]
 "" = "src"

 [tool.pytest.ini_options]
 minversion = "7.0"
 addopts = "-q"
 testpaths = ["tests"]

